<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/descending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="229dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="163dp"
        android:onClick="descending"
        android:text="@string/descending"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/bpm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="281dp"
        android:layout_marginTop="386dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="297dp"
        android:imeOptions="actionGo"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="582dp"
        android:layout_marginBottom="122dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fmajor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="273dp"
        android:layout_marginBottom="582dp"
        android:onClick="fmajor"
        android:text="@string/fmajor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cmajor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="101dp"
        android:layout_marginBottom="582dp"
        android:onClick="cmajor"
        android:text="C Major"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gmajor"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fmajor"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="642dp"
        android:text="@string/MainHeader"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/gmajor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="268dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="582dp"
        android:onClick="gmajor"
        android:text="G Major"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ascending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="239dp"
        android:layout_marginBottom="163dp"
        android:onClick="ascending"
        android:text="@string/ascending"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="469dp"
        android:layout_marginBottom="222dp"
        android:text="@string/SecondaryHeader"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="624dp"
        android:layout_marginBottom="59dp"
        android:onClick="play"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="394dp"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="297dp"
        android:text="@string/bpm"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dmajor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="171dp"
        android:layout_marginEnd="272dp"
        android:layout_marginBottom="512dp"
        android:onClick="dmajor"
        android:text="D Major"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/amajor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="171dp"
        android:layout_marginBottom="512dp"
        android:onClick="amajor"
        android:text="A Major"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/emajor"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dmajor"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/emajor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="269dp"
        android:layout_marginTop="171dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="512dp"
        android:onClick="emajor"
        android:text="E Major"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bmajor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="272dp"
        android:layout_marginBottom="438dp"
        android:onClick="bmajor"
        android:text="B Major"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bflatmajor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="245dp"
        android:layout_marginBottom="438dp"
        android:onClick="bflatmajor"
        android:text="B♭ Major"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/eflatmajor"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bmajor"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/eflatmajor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="269dp"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="438dp"
        android:onClick="eflatmajor"
        android:text="E♭ Major"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/aflatmajor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="367dp"
        android:onClick="aflatmajor"
        android:text="A♭ Major"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dflatmajor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="221dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="367dp"
        android:onClick="dflatmajor"
        android:text="D♭ Major"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>